syntax = "proto3";


package hedge.service.v1;

option go_package = "./pb";

message OrderReq {
  string service = 1;
  string order_id = 2;
  string price = 3;
  string amount = 4;
}

message OrderRsp {
  string status = 1;
}

service Hedge {
  rpc CreateOrder(OrderReq) returns (OrderRsp){}

}


